--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <h2>Captura</h2>
+        <h2>Captura Datos</h2>
         <button class="dropdown-btn">
             <div class="menu-icon">
                 <div class="bar"></div>
@@ -18,13 +18,38 @@
         </button>
         <div class="dropdown-container">
             <a href="{{ url_for('index') }}">Inicio</a>
-            <a href="{{ url_for('datos') }}">Ficha Tecnica</a>
-            <a href="{{ url_for('estimaciones') }}">Estimaciones</a>
-            <a href="{{ url_for('ingreso_personal') }}">Ingreso Personal</a>
+            
+            {% if 'access' in session and 'datos' in session['access'] %}
+                <a href="{{ url_for('datos') }}">Ficha Tecnica</a>
+            {% endif %}
+            
+            {% if 'access' in session and 'estimaciones' in session['access'] %}
+                <a href="{{ url_for('estimaciones') }}">Estimaciones</a>
+            {% endif %}
+
+            {% if 'access' in session and 'pulverizaciones' in session['access'] %}
+                <a href="{{ url_for('pulverizaciones') }}">Pulverizaciones</a>
+            {% endif %}
+            
+            {% if 'access' in session and 'ingreso_personal' in session['access'] %}
+                <a href="{{ url_for('ingreso_personal') }}">Ingreso Personal</a>
+            {% endif %}
+            
+            <a href="{{ url_for('logout') }}">Cerrar Sesión</a>
         </div>
     </div>
 
     <div class="content">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class="flashes">
+                    {% for category, message in messages %}
+                        <li class="{{ category }}">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+
         {% block content %}
         {% endblock %}
     </div>
@@ -32,6 +57,8 @@
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
 </html>
+
+
 
 
 
