con agregacion en pulverizacion

--- a/templates/pulverizaciones.html
+++ b/templates/pulverizaciones.html
@@ -47,17 +47,41 @@
         <label for="edad" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Edad:</label>
         <input type="number" id="edad" name="edad" step="any" required><br><br>
 
-        <label for="muestra" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Muestra:</label>
-        <input type="number" id="muestra" name="muestra" step="1"><br><br> <!-- le quite para que no sea obligatorio -->
+        <label for="bonada" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Numero de Bonada:</label>
+        <input type="number" id="bonada" name="bonada" step="1"><br><br> <!-- le quite para que no sea obligatorio -->
 
-        <label for="mezcla" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Tipo de Mezcla:</label>
-        <input type="text" id="mezcla" name="mezcla" step="any"><br><br>
+        <label for="equipo" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Equipo Aplicacion:</label>
+        <input type="text" id="equipo" name="equipo" step="any"><br><br>
+
+        <label for="operario" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Operario:</label>
+        <input type="text" id="operario" name="operario" step="any"><br><br>
+
+        <label for="producto1" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Producto 1:</label>
+        <input type="text" id="producto1" name="producto1" step="any"><br><br>
+
+        <label for="producto2" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Producto 2:</label>
+        <input type="text" id="producto2" name="producto2" step="any"><br><br>
+
+        <label for="producto3" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Producto 3:</label>
+        <input type="text" id="producto3" name="producto3" step="any"><br><br>
+
+        <label for="producto4" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Producto 4:</label>
+        <input type="text" id="producto4" name="producto4" step="any"><br><br>
+
+        <label for="producto5" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Producto 5:</label>
+        <input type="text" id="producto5" name="producto5" step="any"><br><br>
 
         <label for="ce" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">CE ms:</label>
         <input type="number" id="ce" name="ce" step="0.01"><br><br>
 
         <label for="ph" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">PH:</label>
         <input type="number" id="ph" name="ph" step="0.01"><br><br>
+
+        <label for="temperatura" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Temperatura °C:</label>
+        <input type="number" id="temperatura" name="temperatura" step="0.01"><br><br>
+
+        <label for="velocidad" style="color: rgb(14, 5, 5); font-weight: bold; background-color: rgb(116, 190, 106); padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Velocidad Viento km/hr:</label>
+        <input type="number" id="velocidad" name="velocidad" step="0.01"><br><br>
 
         <label for="observaciones" style="color: rgb(14, 5, 5); font-weight: bold; padding: 5px; border-radius: 5px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Observaciones:</label><br>
         <textarea id="observaciones" name="observaciones" rows="4" cols="50"></textarea><br><br>
